// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  overflow: auto;
}

<aside
  class="ant-layout-sider ant-layout-sider-dark emotion-0 hide-on-print"
  id="default"
  style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
>
  <div
    class="ant-layout-sider-children"
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</aside>
`;

exports[`Render properties.theme - value[0] 1`] = `
.emotion-0 {
  overflow: auto;
}

<aside
  class="ant-layout-sider ant-layout-sider-dark emotion-0 hide-on-print"
  id="properties.theme"
  style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
>
  <div
    class="ant-layout-sider-children"
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</aside>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  overflow: auto;
}

<aside
  class="ant-layout-sider ant-layout-sider-dark emotion-0 hide-on-print"
  id="default"
  style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
>
  <div
    class="ant-layout-sider-children"
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</aside>
`;

exports[`Render required = true properties.theme - value[0] 1`] = `
.emotion-0 {
  overflow: auto;
}

<aside
  class="ant-layout-sider ant-layout-sider-dark emotion-0 hide-on-print"
  id="properties.theme"
  style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
>
  <div
    class="ant-layout-sider-children"
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</aside>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.theme 1`] = `true`;

exports[`Test Schema properties.theme 2`] = `null`;
